Add images to recipe pages
Images folder added and images added to seperate recipe pages

Style of index page also altered for visual appeal

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Odin Recipes</title>
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  
+  <h1><strong>Odin Recipes</strong></h1>
+  <br>
+  <a style="color: aquamarine; font-size: 30px;"href="./odin-recipes/kimchi.html" target="_self" rel="noopener noreferrer">Kimchi</a>
+  <br><br>
+  <a style="color: fuchsia; font-size: 30px;"href="./odin-recipes/kalbi.html" target="_self" rel="noopener noreferrer">Kalbi</a>
+
 </body>
 </html>
