--- a/odin-recipes/kalbi.html
+++ b/odin-recipes/kalbi.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>Kalbi</h1>
+  <img src="../images/kalbi.jpg" alt="Image of traditional Korean Kalbi" width="300"
 </body>
 </html>
