--- a/odin-recipes/kimchi.html
+++ b/odin-recipes/kimchi.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Kimchi</title>
 </head>
 <body>
-  
+  <h1>Kimchi Recipe</h1>
+  <img src="../images/kimchi.jpg" alt="Image of traditional Korean kimchi" width="300"
 </body>
 </html>
