Add recipe instructions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1><strong>Odin Recipes</strong></h1>
   <br>
-  <a style="color: aquamarine; font-size: 30px;"href="./odin-recipes/kimchi.html" target="_self" rel="noopener noreferrer">Kimchi</a>
+  <a style="color: rgb(67, 168, 134); font-size: 30px;"href="./odin-recipes/kimchi.html" target="_self" rel="noopener noreferrer">Kimchi</a>
   <br><br>
   <a style="color: fuchsia; font-size: 30px;"href="./odin-recipes/kalbi.html" target="_self" rel="noopener noreferrer">Kalbi</a>
 
