--- a/odin-recipes/kalbi.html
+++ b/odin-recipes/kalbi.html
@@ -7,6 +7,26 @@
 </head>
 <body>
   <h1>Kalbi</h1>
-  <img src="../images/kalbi.jpg" alt="Image of traditional Korean Kalbi" width="300"
+  <img src="../images/kalbi.jpg" alt="Image of traditional Korean Kalbi" width="400"
+  <br>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>800g beef ribs</li>
+    <li>2 tbsp roasted sesame oil</li>
+    <li>3 tbsp honey</li>
+    <li>1/2 onion</li>
+    <li>90g Korean chives</li>
+  </ul>
+
+  <h3>Method</h3>
+  <ol>
+    <li>Put the ribs in a deep baking tray. Fill with enough water to submerge them, cover, then soak for 30–45 minutes, changing the water once or twice. Drain.</li>
+    <li>Meanwhile, put all the remaining ingredients in a food processor and blend until smooth. Put the soaked ribs and marinade in a baking tray or wide, flat bowl. Using your hands, massage the sauce into the meat. Cover and refrigerate overnight.</li>
+    <li>If cooking on the hob, put a heavy griddle pan over a medium-high heat. When hot, add the ribs to the pan in batches and cook for 6 minutes on each side.</li>
+    <li>If barbecuing, place the grill 12–15cm/5–6in above the flame. Cook the ribs for 6 minutes on each side, turning every now and again to cook them evenly, until they are caramel-brown and slightly charred in places.</li>
+    <li>Once cooked, use a pair of scissors to cut off the strip of bones and discard, then snip the meat into bite-size pieces. Serve immediately.</li>
+  </ol>
+
+  <a href="../index.html" target="_self" rel="noreferrer">Home</a>
 </body>
 </html>
