--- a/odin-recipes/kalbi.html
+++ b/odin-recipes/kalbi.html
@@ -24,7 +24,7 @@
     <li>Meanwhile, put all the remaining ingredients in a food processor and blend until smooth. Put the soaked ribs and marinade in a baking tray or wide, flat bowl. Using your hands, massage the sauce into the meat. Cover and refrigerate overnight.</li>
     <li>If cooking on the hob, put a heavy griddle pan over a medium-high heat. When hot, add the ribs to the pan in batches and cook for 6 minutes on each side.</li>
     <li>If barbecuing, place the grill 12–15cm/5–6in above the flame. Cook the ribs for 6 minutes on each side, turning every now and again to cook them evenly, until they are caramel-brown and slightly charred in places.</li>
-    <li>Once cooked, use a pair of scissors to cut off the strip of bones and discard, then snip the meat into bite-size pieces. Serve immediately.</li>
+    <li>Once cooked, use a pair of scissors to cut off the strip of bones and discard, then snip the meat into bite-size pieces. <i>Serve immediately.</i></li>
   </ol>
 
   <a href="../index.html" target="_self" rel="noreferrer">Home</a>
