--- a/odin-recipes/kimchi.html
+++ b/odin-recipes/kimchi.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Kimchi Recipe</h1>
   
-  <img src="../images/kimchi.jpg" alt="Image of traditional Korean kimchi" width="400"
+  <img src="../images/kimchi.jpg" alt="Image of traditional Korean kimchi" width="400">
   <br>
   <h3>Ingredients</h3>
   <ul>
