Add CSS styling to webpages

--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles.css"/>
   <title>Odin Recipes</title>
 </head>
 <body>
-  <h1><strong>Odin Recipes</strong></h1>
   <br>
-  <a style="color: rgb(67, 168, 134); font-size: 30px;"href="./odin-recipes/kimchi.html" target="_self" rel="noopener noreferrer">Kimchi</a>
+  
+  <h1 class="title">Odin Recipes</h1>
+  <br>
+  
+  <img width="500px" src="./images/dinner-table.jpg" alt="An image of various Korean foods" rel="noreferrer"/>
   <br><br>
-  <a style="color: fuchsia; font-size: 30px;"href="./odin-recipes/kalbi.html" target="_self" rel="noopener noreferrer">Kalbi</a>
+  
+  <a class="link" href="./odin-recipes/kimchi.html" target="_self" rel="noopener noreferrer">Kimchi</a>
+  <br><br>
+  <a class="link" href="./odin-recipes/kalbi.html" target="_self" rel="noopener noreferrer">Kalbi</a>
+  <br><br>
+  <a class="link" href="./odin-recipes/kimbap.html" target="_self" rel="noopener noreferrer">Kimbap</a>
 
 </body>
 </html>
