--- a/odin-recipes/kalbi.html
+++ b/odin-recipes/kalbi.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles.css"/>
   <title>Document</title>
 </head>
 <body>
-  <h1>Kalbi</h1>
+  <h1 class="title">Kalbi Recipe</h1>
   <img src="../images/kalbi.jpg" alt="Image of traditional Korean Kalbi" width="400"
   <br>
-  <h3>Ingredients</h3>
-  <ul>
+  <h3 class="header">Ingredients</h3>
+  <ul class="ingredients">
     <li>800g beef ribs</li>
     <li>2 tbsp roasted sesame oil</li>
     <li>3 tbsp honey</li>
@@ -18,8 +19,8 @@
     <li>90g Korean chives</li>
   </ul>
 
-  <h3>Method</h3>
-  <ol>
+  <h3 class="header">Method</h3>
+  <ol class="method">
     <li>Put the ribs in a deep baking tray. Fill with enough water to submerge them, cover, then soak for 30–45 minutes, changing the water once or twice. Drain.</li>
     <li>Meanwhile, put all the remaining ingredients in a food processor and blend until smooth. Put the soaked ribs and marinade in a baking tray or wide, flat bowl. Using your hands, massage the sauce into the meat. Cover and refrigerate overnight.</li>
     <li>If cooking on the hob, put a heavy griddle pan over a medium-high heat. When hot, add the ribs to the pan in batches and cook for 6 minutes on each side.</li>
@@ -27,6 +28,6 @@
     <li>Once cooked, use a pair of scissors to cut off the strip of bones and discard, then snip the meat into bite-size pieces. <i>Serve immediately.</i></li>
   </ol>
 
-  <a href="../index.html" target="_self" rel="noreferrer">Home</a>
+  <a class="home link" href="../index.html" target="_self" rel="noreferrer">Home</a>
 </body>
 </html>
