--- a/odin-recipes/kimchi.html
+++ b/odin-recipes/kimchi.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles.css"/>
   <title>Kimchi</title>
 </head>
 <body>
-  <h1>Kimchi Recipe</h1>
+  <h1 class="title">Kimchi Recipe</h1>
   
   <img src="../images/kimchi.jpg" alt="Image of traditional Korean kimchi" width="400">
   <br>
-  <h3>Ingredients</h3>
-  <ul>
+  <h3 class="header">Ingredients</h3>
+  <ul class="ingredients">
     <li>4kg Chinese cabbage</li>
     <li>3.8L water</li>
     <li>285g coarse sea salt</li>
@@ -19,8 +20,8 @@
     <li>90g Korean chives</li>
   </ul>
 
-  <h3>Method</h3>
-  <ol>
+  <h3 class="header">Method</h3>
+  <ol class="method">
     <li>Cut the napa cabbage into quarters and rinse it in running water. Make sure the stem is intact.</li>
     <li>Dissolve the coarse salt in the water in a large bowl. Dip the napa cabbage in the saltwater one at a time and transfer it onto a tray for further salting.</li>
     <li>Put the salted cabbage in a large food grade plastic bag or large bucket (wedge side of the cabbage to be facing up) and pour in the reserved saltwater from step 2. Close the plastic bag. If using a bucket, get something heavy on top of the cabbage to press down</li>
@@ -28,7 +29,7 @@
     <li><strong>Finish making kimchi</strong></li>
   </ol>
 
-  <a href="../index.html" target="_self" rel="noreferrer">Home</a>
+  <a class="home link" href="../index.html" target="_self" rel="noreferrer">Home</a>
 
 </body>
 </html>
